<resources>
   <string translatable="false" name="app_name">ONDOGANCI</string>
   <string translatable="false" name="action_settings">Settings</string>
   <string translatable="false" name="sync">Sync</string>
   <string translatable="false" name="action_log_out">Logging Out</string>
   <string translatable="false" name="powered_by">Powered by</string>
   <string translatable="false" name="username">Username</string>
   <string translatable="false" name="password">Password</string>
   <string translatable="false" name="done" >Done</string>
   <string translatable="false" name="navigation_drawer_close">Close</string>
   <string translatable="false" name="side_nav_add" >Add new child</string>
   <string translatable="false" name="scan_card" >Card Scanner</string>
   <string translatable="false" name="side_nav_out_of_catchment">Record out of catchment vaccination</string>
   <string translatable="false" name="nav_register">Register</string>
   <string translatable="false" name="attribution_text">Powered by OpenSRP</string>
   <string translatable="false" name="show_password_text">Show password</string>
   <string translatable="false" name="app_version">App version: %1$s (built on %2$s)</string>
   <string translatable="false" name="stock_title"> Stock Control</string>
   <string translatable="false" name="login_text">Log In</string>
   <string translatable="false" name="log_out_text">Log Out</string>
   <string translatable="false" name="permissions_required">Permissions Required</string>
   <string translatable="false" name="read_write_permissions_required">Read and write external storage permissions are required when saving and accessing profile images.</string>
   <string translatable="false" name="english">English</string>
   <string translatable="false" name="french">Français</string>
   <string translatable="false" name="arabic">عربى</string>
   <string translatable="false" name="zeir_id">ONDOGANCI ID</string>
   <string translatable="false" name="iz_id_hint">ONDOGANCI ID number</string>
   <string translatable="false" name="nav_logo">Unicef-Tunisia</string>
   <string translatable="false" name="title_activity_child_immunization">ChildImmunizationActivity</string>
   <string translatable="false" name="cohort_coverage_report">Cohort Coverage Report</string>
   <string translatable="false" name="annual_coverage_report_cso">Annual Coverage Report - CSO</string>
   <string translatable="false" name="annual_coverage_report_ondo">Annual Coverage Report - ONDOGANCI</string>
   <string translatable="false" name="facility_cumulative_coverage_report">Facility Cumulative Coverage Report</string>
   <string translatable="false" name="filter_cohort">Cohort: </string>
   <string translatable="false" name="filter_cohort_size">Cohort Size: </string>
   <string translatable="false" name="filter_year">Year: </string>
   <string translatable="false" name="filter_cso_target">CSO Target: </string>
   <string translatable="false" name="filter_ONDOGANCI_target">ONDOGANCI Target: </string>
   <string translatable="false" name="coverage_vaccine_header">Vaccine</string>
   <string translatable="false" name="coverage_vaccinated_header">Vaccinated</string>
   <string translatable="false" name="coverage_header">Coverage</string>
   <string translatable="false" name="coverage_percentage">%1$d%%</string>
   <string translatable="false" name="in_progress">(In Progress)</string>
   <string translatable="false" name="enter_cso_hint">Enter %1$s CSO Under 1 Population</string>
   <string translatable="false" name="set_cso_title">Set CSO Under 1 Population &#8211; %1$d</string>
   <string translatable="false" name="cso_population_value">%1$d Children</string>
   <string translatable="false" name="not_defined">Not defined</string>
   <string translatable="false" name="no_cso_target">Error: No CSO target</string>
   <string translatable="false" name="cso_target_cannot_be_blank">CSO target cannot be blank.</string>
   <string translatable="false" name="cso_target_must_be_greater_than_zero">Denominator must be greater than 0.</string>
   <string translatable="false" name="cso_target_label">CSO Target: </string>
   <string translatable="false" name="cso_target_monthly">CSO Target Monthly: </string>
   <string translatable="false" name="facility_cumulative_title">Immunization Monitoring Chart - %1$d - %2$s</string>
   <string translatable="false" name="total_vaccine">Total\n%1$s</string>
   <string translatable="false" name="total_cum">Cum.\n%1$s</string>
   <string translatable="false" name="total_dropout">Drop\nOut</string>
   <string translatable="false" name="total_dropout_percentage">Drop\nOut %</string>
   <string translatable="false" name="total_dropout_penta">Drop\nOut (1–3)</string>
   <string translatable="false" name="total_cum_dropout">Cum\nDrop\nOut</string>
   <string translatable="false" name="total_cum_dropout_percentage">Cum\nDrop\nOut %</string>
   <string translatable="false" name="bcg_measles_cumulative">BCG &#8211; Measles Cumulative</string>
   <string translatable="false" name="bcg_measles_cumulative_dropout_report">BCG &#8211; Measles Cumulative Dropout Report</string>
   <string translatable="false" name="bcg_measles_cohort">BCG &#8211; Measles Cohort</string>
   <string translatable="false" name="bcg_measles_cohort_dropout_report">BCG &#8211; Measles Cohort Dropout Report</string>
   <string translatable="false" name="penta_cumulative">Penta Cumulative</string>
   <string translatable="false" name="penta_cumulative_dropout_report">Penta Cumulative Dropout Report</string>
   <string translatable="false" name="penta_cohort">Penta Cohort</string>
   <string translatable="false" name="penta_cohort_dropout_report">Penta Cohort Dropout Report</string>
   <string translatable="false" name="measles_cumulative">Measles Cumulative</string>
   <string translatable="false" name="measles_cumulative_dropout_report">Measles Cumulative Dropout Report</string>
   <string translatable="false" name="cumulative_dropout">Cumulative Dropout (YTD): </string>
   <string translatable="false" name="pls_set_cso_target">Please set the CSO Target first.</string>
   <string translatable="false" name="dropout_month_header">Month</string>
   <string translatable="false" name="dropout_cohort_header">Cohort</string>
   <string translatable="false" name="dropout_started_completed_header">(Started - Completed) / Started </string>
   <string translatable="false" name="dropout_percentage_header">Dropout Percent</string>
   <string translatable="false" name="dropout_cohort_bcg_size_header">(Cohort Size - M/MR 1) / Cohort Size </string>
   <string translatable="false" name="dropout_cohort_penta_size_header">(Cohort Size - Penta 3) / Cohort Size </string>
   <string translatable="false" name="error_code">Error: %1$s</string>
   <string translatable="false" name="something_went_wrong">Something went wrong&#8230;</string>
   <string translatable="false" name="install">Install</string>
   <string translatable="false" name="activate">Activate</string>
   <string translatable="false" name="alert">Alert</string>
   <string translatable="false" name="card_not_registered">This card is not registered&#8230;</string>
   <string translatable="false" name="successfully_updated_card">Successfully updated card &#8230;</string>
   <string translatable="false" name="card_already_registered">This card is already registered&#8230;</string>
   <string translatable="false" name="card_no">Card No. %1$s </string>
   <string translatable="false" name="no_information_on_card">No information on the card. The card does not have a store for this application</string>
   <string translatable="false" name="the_card_is_full">The card is full and unusable. Please register another card</string>
   <string translatable="false" name="there_is_an_error_with_record"> There is an error with this record. Please contact the helpdesk with error code  %1$s %2$s %3$s and the client’s ID</string>
   <string translatable="false" name="the_operation_was_cancelled">The operation was cancelled. Please try again</string>
   <string translatable="false" name="the_operation_failed">The operation failed. Please try again. Please contact the helpdesk with error code %1$s %2$s %3$s</string>
   <string translatable="false" name="this_card_is_invalid">This card is invalid. Please use another card</string>
   <string translatable="false" name="new_child_record">New child record </string>
   <string translatable="false" name="no_child_record_found">No record found on this device for this card, would you like to create one ?</string>
   <string translatable="false" name="operation_not_allowed">Operation not allowed</string>
   <string translatable="false" name="store_already_exists">Store already exists</string>
   <string translatable="false" name="store_does_not_exist">Store does not exist</string>
   <string translatable="false" name="store_full">Store full</string>
   <string translatable="false" name="operation_Cancelled">Operation Cancelled</string>
   <string translatable="false" name="authentication_failed">Authentication Failed</string>
   <string translatable="false" name="sdk_is_not_configured">SDK is not configured</string>
   <string translatable="false" name="operation_failed">Operation Failed</string>
   <string translatable="false" name="authentication_method_not_supported">Authentication method not supported</string>
   <string translatable="false" name="read_card_write_timed_out">Read Card/Write Timed out</string>
   <string translatable="false" name="unable_to_read_card">Unable to read card</string>
   <string translatable="false" name="not_a_valid_card">Not a valid card</string>
   <string translatable="false" name="key_expired">Key Expired</string>
   <string translatable="false" name="Key_validation_error">Key validation error</string>
   <string translatable="false" name="incorrect_key">Incorrect Key</string>
   <string translatable="false" name="key_revoked">Key revoked</string>
   <string translatable="false" name="application_ey_mismatch">Application-Key mismatch</string>
   <string translatable="false" name="not_found">Not Found</string>
   <string translatable="false" name="record_data_exceeds_limit">Record data exceeds limit</string>
   <string translatable="false" name="partially_successful">Partially Successful</string>
   <string translatable="false" name="user_authentication_failed">User Authentication Failed</string>
   <string translatable="false" name="new_card_registration">New card registration </string>
   <string translatable="false" name="no_child_registration_found">No card associated with this child on this device, would you to register card ?</string>
   <string translatable="false" name="reset_card">Reset card</string>
   <string translatable="false" name="are_you_sure_reset_card">Are you sure you want to Reset this card? \n\nThis action CANNOT be reversed&#8230;</string>
   <string translatable="false" name="arabic_not_supported">Vaccination in Arabic is not supported in this version</string>
   <string translatable="false" name="logo_string">logo</string>
   <string translatable="false" name="birth_registration_number">Birth registration number</string>
   <string translatable="false" name="middle_name">Middle Name</string>
   <string translatable="false" name="home_address">Home Address</string>
   <string translatable="false" name="village">Village</string>
   <string translatable="false" name="traditional_authority">Traditional Authority</string>
   <string translatable="false" name="mother_guardian_nid">Mother Guardian NID</string>
   <string translatable="false" name="protected_at_birth">Protected at Birth</string>
   <string translatable="false" name="mother_hiv_status">Mother Hiv Status</string>
   <string translatable="false" name="child_hiv_status">Child Hiv Status</string>
   <string translatable="false" name="child_treatment">Child Treatment</string>
</resources>