<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/canvasSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:paddingBottom="@dimen/login_bottom_margin">

        <!-- Top section -->
        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/zeir_big" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ic_opensrp_logo" />

            <TextView
                android:id="@+id/login_build_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="#bfe7f3" />
        </LinearLayout>
        <!-- Middle section -->
        <LinearLayout
            android:id="@+id/middle_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_mid_section_horizontal_margin"
            android:paddingLeft="@dimen/login_horizontal_margin"
            android:paddingRight="@dimen/login_horizontal_margin"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_component_height"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edit_text_bg"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="10dp"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/login_edit_text_textSize"
                android:typeface="sans" />

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_component_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edit_text_bg"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/password"
                android:imeActionId="@integer/login"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="10dp"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/login_edit_text_textSize"
                android:typeface="sans" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/checkbox_margin_top">

                <CheckBox
                    android:id="@+id/login_show_password_checkbox"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="6dp"
                    android:button="@drawable/white_checkbox_bg_selector" />

                <TextView
                    android:id="@+id/login_show_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/login_show_password_checkbox"
                    android:text="@string/show_password_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_edit_text_textSize" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="25dp"
                android:layout_weight="8"
                android:background="@drawable/login_button"
                android:ems="10"
                android:shadowColor="#ffffff"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="0.5"
                android:text="@string/login_text"
                android:textColor="#666666"
                android:textSize="20sp" />

        </LinearLayout>
        <!-- Bottom section -->
        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/powered_by"
                android:textColor="#bfe7f3" />

            <ImageView
                android:id="@+id/opensrp_logo_image_view"
                android:layout_width="@dimen/login_opensrp_logo_width"
                android:layout_height="@dimen/login_opensrp_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_opensrp_logo" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>